添加jvm参数注释